--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "phaser": "^2.6.2",
+    "phaser-state-transition": "^2.4.2",
     "qjs": "0.0.2",
     "rxjs": "^5.0.3"
   }
